--- a/apps/kiosk-management/src/styles.scss
+++ b/apps/kiosk-management/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+.kioskTable {
+  text-align: center;
+  td,
+  th {
+    border: 2px solid red;
+    margin: 5px;
+  }
+}
+
+.form-container {
+  border: 2px solid red;
+  margin: 2%;
+  padding: 1%;
+  width: 30%;
+}
