--- a/apps/kiosk-management/src/styles.scss
+++ b/apps/kiosk-management/src/styles.scss
@@ -1,16 +1,69 @@
 /* You can add global styles to this file, and also import other style files */
-.kioskTable {
-  text-align: center;
-  td,
-  th {
-    border: 2px solid red;
-    margin: 5px;
+body {
+  background-color: #f3f3f3 !important;
+}
+
+#root {
+  margin: 0 auto;
+  width: 90%;
+}
+#create-kiosk-button,
+#view-logs-button,
+#logout-button {
+  color: #000;
+}
+
+#filter-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 22px;
+  #dropdown-filter {
+    width: 28%;
+    min-width: 300px;
+    font-size: 16px;
+    & .default {
+      color: rgba(0, 0, 0, 0.7);
+    }
+  }
+  .input {
+    width: 70% !important;
+  }
+  #kiosk-global-filter {
+    min-width: 500px;
+    &::placeholder {
+      color: rgba(0, 0, 0, 0.7);
+    }
+  }
+}
+
+.log {
+  font-size: 17px;
+  margin: 1.5% 0.5%;
+  padding: 0 0 1%;
+  border-bottom: 2px solid lightgray;
+}
+
+#no-results {
+  p {
+    margin: 4%;
+  }
+}
+
+#logs-global-filter {
+  min-width: 300px;
+  margin-top: 2%;
+}
+.table-container {
+  #table {
+    margin-top: 22px;
   }
 }
 
 .form-container {
-  border: 2px solid red;
-  margin: 2%;
-  padding: 1%;
+  margin-top: 2%;
+  box-shadow: 0px 0px 17px 2px lightgrey;
+  padding: 2%;
   width: 30%;
+  border-radius: 9px;
+  background: white;
 }
